@startuml
package "ry.ms.view.user" {
    class LoginController {
        +handleLogin()
    }
    class RegisterController {
        +handleRegister()
    }
}

package "ry.ms.businessLogic.user" {
    class SessionFacade <<Singleton>> {
        -currentUser : User
        +getSessionFactory() : SessionFacade
        +loginUser() : User
        +registerUser() : User
    }
    class UserManager {
        +login() : User
        +register() : User
    }
    class User {
        -email : String
        -username : String
        -role : String
    }
}

package "ry.ms.persistLogic.user" {
    interface UserDAO {
        +findByEmail()
        +createUser()
    }
    class UserDAOPostgres {
        +findByEmail()
        +createUser()
    }
}

LoginController --> SessionFacade
RegisterController --> SessionFacade
SessionFacade --> UserManager
UserManager --> UserDAO
UserDAO <|-- UserDAOPostgres
UserManager ..> User
@enduml
